--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -51,6 +51,7 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/underscore.js"></script>
 <script src="/js/Backbone.js"></script>
+<script src="/js/d3.v3.js"></script>
 <script src="/js/yoda.js"></script>
 <script src="/js/MI6.js"></script>
 <script src="/js/basic.js"></script>
