--- a/views/propertyindex.ejs
+++ b/views/propertyindex.ejs
@@ -5,6 +5,10 @@
     <div class="serverInfo">
     <div class="serverName">{{name}}</div>
     <div class="server-details">
+      <svg class="memUsage">
+        <path d="M200,200 " id="arc" class="backer" fill="none" stroke="#ecf0f1 " stroke-width="6" />
+        <path d="M200,200 " id="arc" class="filler" fill="none" stroke="#c0392b" stroke-width="7" />
+      </svg>
       <div class="loadAverage1"></div>
 
     </div>
