--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,6 +20,7 @@
 
 <body class="<%= body_class %>">
   <div id="mainWrap">
+    <a href="javascript:void(0);" id="setNotify">Allow Browser Notifications</a>
     <div id="messageContainer"></div>
     <div id="main">
       <h1 id="title"><%- title -%></h1>
