this is Goldeneye's finished version

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -50,6 +50,7 @@
 <% } %>
 <script src="/js/jquery.js"></script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/Krang.js"></script>
 <script src="/js/underscore.js"></script>
 <script src="/js/Backbone.js"></script>
 <script src="/js/d3.v3.js"></script>
