--- a/views/propertyindex.ejs
+++ b/views/propertyindex.ejs
@@ -5,7 +5,13 @@
     <div class="serverInfo">
       <div class="serverName">{{name}}</div>
       <div class="server-details">
-        <div class="memUse"></div>
+        <div class="memUse">
+
+        </div>
+        <div class="memLabel">
+          <div class="value"></div>
+          <div class="label">Memory Usage</div>
+        </div>
         <div class="loadAverage1">
           <div class="value"></div>
           <div class="label">Load Average</div>
