--- a/public/sass/modules/_menuoverlay.scss
+++ b/public/sass/modules/_menuoverlay.scss
@@ -21,10 +21,7 @@
 body.home {
   #main {
     padding:20px;
-    -webkit-transition: padding-left 1s ease-in-out;
-    -moz-transition: padding-left 1s ease-in-out;
-    -o-transition: padding-left 1s ease-in-out;
-    transition: padding-left 1s ease-in-out;
+    
     h1#title {
       display:none;
     }
@@ -33,7 +30,10 @@ body.home {
     }
     &.padded {
       padding-left:95px;
-
+      -webkit-transition: padding-left .3s ease-in-out;
+      -moz-transition: padding-left .3s ease-in-out;
+      -o-transition: padding-left .3s ease-in-out;
+      transition: padding-left .3s ease-in-out;
       #entityList {
         float:left;
       }
@@ -42,7 +42,7 @@ body.home {
 
 }
 .bt-menu {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
