--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -86,7 +86,7 @@ html, body {height: 100%;}
   
   width:25%;
   float:left;
-  min-width:280px;
+  min-width:400px;
   position:relative;
   .serverInfo {
     background:#fff;
@@ -94,6 +94,7 @@ html, body {height: 100%;}
     margin-right:5px;
     margin-bottom:10px;
     min-height:150px;
+    min-width:400px;
     height:400px;
     -webkit-box-shadow: 0px 3px 6px -4px #969696; /* Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
             box-shadow: 0px 3px 6px -4px #969696; /* Chrome 6+, Firefox 4+, IE 9+, iOS 5+, Opera 10.50+ */
@@ -114,13 +115,17 @@ html, body {height: 100%;}
     text-transform:uppercase;
 
   }
+  .memLabel {
+    position:absolute;
+    top:135px;
+    left:82px;
+  }
   .loadAverage1 {
     font-size:60px;
     text-align:center;
     position:absolute;
-    top:80px;
-    left:0px;
-    width:100%;
+    top:30px;
+    right:10px;
     .value {
       font-size:60px;
     }
@@ -133,11 +138,9 @@ html, body {height: 100%;}
   .memUse{
     width:inherit;
     height:auto;
-    margin:0 auto;
      display: block;
      svg {
       display:block;
-      margin:0 auto;
      }
   }
   .diskSpace {
@@ -158,7 +161,7 @@ html, body {height: 100%;}
       .value {
         height:20px;
         float:left;
-        background:#c0392b;
+        background:#2ecc71;
         -webkit-transition: width .25s ease-in-out;
         -moz-transition: width .25s ease-in-out;
         -o-transition: width .25s ease-in-out;
@@ -191,11 +194,17 @@ html, body {height: 100%;}
         float:left;
         margin-left:10px;
         display:block;
+        width:60px;
+        margin-bottom:10px;
         -webkit-box-shadow: 0px 3px 6px -4px #969696; /* Android 2.3+, iOS 4.0.2-4.2, Safari 3-4 */
         box-shadow: 0px 3px 6px -4px #969696; /* Chrome 6+, Firefox 4+, IE 9+, iOS 5+, Opera 10.50+ */
         border:1px solid #f1f1f1;
         padding: 5px 7px 5px 7px;
         text-align: center;
+        &.error {
+          background:#e74c3c;
+          color:#fff;
+        }
       }
     }
   }
